tests/baselines/reference/structAppearsToHaveMembersOfObject_basic.errors.txt
tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/structAppearsToHaveMembersOfObject_basic.ts(6,5): error TS2323: Type 'C' is not assignable to type 'Object'.
tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/structAppearsToHaveMembersOfObject_basic.ts(7,5): error TS2323: Type 'C' is not assignable to type '{}'.


==== tests/cases/conformance/basicStructs/structDeclarations_basic/structHeritageSpecification_basic/structAppearsToHaveMembersOfObject_basic.ts (2 errors) ====
    struct C { foo: string; }
    
    var c: C;
    var r = c.toString(); // call members of JS Object
    var r2 = c.hasOwnProperty('');
    var o: Object = c; // error, not assignable
        ~
!!! error TS2323: Type 'C' is not assignable to type 'Object'.
    var o2: {} = c; // error, not assignable
        ~~
!!! error TS2323: Type 'C' is not assignable to type '{}'.
    